--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,24 @@
     <script src="//unpkg.com/alpinejs" defer></script>
     <script>
         //awful wadaily panel :) 
+        Date.prototype.getWeek = function() {
+            var date = new Date(this.getTime());
+            date.setHours(0, 0, 0, 0);
+            // Thursday in current week decides the year.
+            date.setDate(date.getDate() + 3 - (date.getDay() + 6) % 7);
+            // January 4 is always in week 1.
+            var week1 = new Date(date.getFullYear(), 0, 4);
+            // Adjust to Thursday in week 1 and count number of weeks from date to week1.
+            return 1 + Math.round(((date.getTime() - week1.getTime()) / 86400000
+                                    - 3 + (week1.getDay() + 6) % 7) / 7);
+        }
+
         const data = {
             day: new Date(),
+            dayText: "",
+            dayEvents: [],
+            weekText: "",
+            weekEvents: [],
             changeScheduleDay() {
                 const code = prompt("Enter a day code (i.e. ABLK, DAY5, etc)")
                 if (code == undefined) return;
@@ -27,6 +43,20 @@
                 //make it reload the page here
                     .then(() => {})
                 
+            },
+            addWeekElement() {
+                this.weekEvents.push(this.weekText)
+                const weekCode = this.day.getWeek() * this.day.getFullYear()
+                fetch('/week', {
+                    method: 'POST',
+                    body: JSON.stringify({
+                        list: this.weekEvents,
+                        week: weekCode
+                    }),
+                    headers: {
+                        "content-type": "application/json"
+                    }
+                })
             }
         }
     </script>
@@ -48,13 +78,30 @@
     <hr class="my-5">
     <p class="text-lg">Today's schedule</p>
     <p>Currently set to ABLK (A Block)</p>
-    <button class="bg-gray-400 text-white px-4 my-2">Trigger Veracross Reupdate</button>
+    <!-- <button class="bg-gray-400 text-white px-4 my-2">Trigger Veracross Reupdate</button> -->
     <br>
     <button class="bg-gray-400 text-white px-4 mb-2" x-on:click="changeScheduleDay">Change</button>
     <hr class="my-5">
-    <p class="text-lg">Today's events</p>
+    <p class="text-lg">Today's announcements</p>
+    <template x-if="dayEvents.length == 0">
+        <p class="text-gray-600">No events listed</p>
+    </template>
+    <p class="mt-3">Add an announcement</p>
+    <div>
+        <textarea x-model="dayText" placeholder="New announcement for day" class="w-72 border-2 border-gray-500 p-1"></textarea>
+        <br>
+        <button class="bg-gray-400 text-white px-4" x-on:click="">Add</button>
+    </div>
     <hr class="my-5">
-    <p class="text-lg">Weekly events</p>
-    
+    <p class="text-lg">Weekly announcements</p>
+    <template x-if="dayEvents.length == 0">
+        <p class="text-gray-600">No events listed</p>
+    </template>
+    <p class="mt-3">Add an announcement</p>
+    <div>
+        <textarea x-model="weekText" placeholder="New announcement for week" class="w-72 border-2 border-gray-500 p-1"></textarea>
+        <br>
+        <button class="bg-gray-400 text-white px-4" x-on:click="addWeekElement">Add</button>
+    </div>
 </body>
 </html>
